============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.6.5 - not yet released

Version 6.6.4 - 2013/07/11
* map
  - fix stuttering terrain on Windows CE
  - fix multi-touch pan gesture (#2684)
* calculations
  - improve robustness of the zig-zag wind algorithm (#2961)
* devices
  - FLARM: work around a Garrecht TRX-1090 firmware bug (#2745, #2749)
  - LX: faster LXNAV Nano detection over Bluetooth (#2819)
  - Volkslogger: increase timeout to calculate security (#2910)
  - fix bogus error message after pressing "Cancel"
  - show Bluetooth name instead of MAC address in device list

Version 6.6.3 - 2013/07/02
* map
  - fill FAI triangle areas on Windows
* devices
  - FLARM: improve task declaration reliability
  - LX: support Nano firmware 2.10 (#2819)
* Android
  - fix compatibility issue with Android 2.2
  - detect when internal GPS is lost on Android 2.3 and older (#2929)
* user interface
  - fix unit display for pressure in flight setup dialog (#2933)
* data files
  - added "Pilatus B4" polar

Version 6.6.2 - 2013/06/12
* map
  - fix misplaced topography labels (#2564)
  - fix keyboard panning with track up (#2908)
* infoboxes
  - ensure that the unit symbol is visible
  - fix ballast display in vario gauge (#2911)
* tasks
  - update all settings after task type change
* devices
  - Volkslogger: fix IGC file download on Windows CE
  - EWmicroRecorder: fix corrupt task declaration (#2921)
  - fix potential crash when garbage is received from device
  - fix IOIO reconnect
  - generate G record even when first device has no GPS (#2849)
* cross section
  - also display unknown airspace types (#2884)
* Raspberry Pi
  - fix instant crash (#2922)
* Altair
  - never override data path (#2509)
* Android
  - faster startup

Version 6.6.1 - 2013/05/08
* cross section